--- a/app/src/routes/Auth/components/Logout.scss
+++ b/app/src/routes/Auth/components/Logout.scss
@@ -1,4 +1,6 @@
 .logout {
+    margin: 32px;
+
     &__link {
         text-decoration: none;
         font-weight: normal;
